[package]
authors = ["RundownRhino <52856631+RundownRhino@users.noreply.github.com>"]
edition = "2021"
name = "region_scanner"
version = "0.3.1"
description = "A CLI program to scan Minecraft region files and create Just Enough Resources world-gen.json files from the results. Works on 1.13+. On 1.12 and below works too, but only for vanilla worlds."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["cargo", "derive"] }
color-eyre = { version = "0.6.2", default-features = false }
fastanvil = "0.26.1"
itertools = "0.10.5"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rayon = "1.6.1"
serde = "1.0.152"
serde_json = "1.0.93"
