[package]
authors = ["RundownRhino <52856631+RundownRhino@users.noreply.github.com>"]
edition = "2021"
name = "region_scanner"
version = "0.3.7"
description = "A CLI program to scan Minecraft region files and create Just Enough Resources world-gen.json files from the results. Works on 1.13+. On 1.12 and below works too, but only for vanilla worlds."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["cargo", "derive"] }
color-eyre = { version = "0.6.2", default-features = false }
fastanvil = "0.31.0"
itertools = "0.12.1"
log = "0.4.21"
pretty_env_logger = "0.5.0"
rayon = "1.9.0"
serde = "1.0.197"
serde_json = "1.0.114"
